Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112920

FTBFS qt 6.5.0 on gcc 9

    XMLWordPrintable

Details

    • Linux/X11
    • b404930e1 (dev), 32fa63f65 (6.7), 5a5741996 (6.6), 936544735 (tqtc/lts-6.5)

    Description

      When trying to build qt 6.5.0 on gcc 9.2.1, compilation fails with the following:

      [80/1344] Building CXX object qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/text/qstring.cpp.o
      FAILED: qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/text/qstring.cpp.o 
      /usr/bin/g++ -DHAVE_CONFIG_H -DPCRE2_STATIC -DQT_BOOTSTRAPPED -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_TYPESAFE_FLAGS -DQT_USE_QSTRINGBUILDER -DQT_VERSION_MAJOR=6 -DQT_VERSION_MINOR=5 -DQT_VERSION_PATCH=0 -DQT_VERSION_STR=\"6.5.0\" -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/src/corelib/Core_autogen/include -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/include -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/include/QtCore -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/src/corelib -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/src/corelib/global -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/src/corelib/kernel -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/../3rdparty/tinycbor/src -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/include/QtCore/6.5.0 -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/include/QtCore/6.5.0/QtCore -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/../3rdparty/forkfd -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/build/334b2a969334cd2c51ebd2fd221a304f99e9add9/build/Release/qtbase/src/corelib/.rcc -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/mkspecs/linux-g++ -I/home/conan/w/prod/BuildSingleReference/.conan/data/zlib/1.2.13/_/_/package/6af9cc7cb931c5ad942174fd7838eb655717c709/include -I/home/conan/w/prod/BuildSingleReference/.conan/data/double-conversion/3.2.1/_/_/package/b911f48570f9bb2902d9e83b2b9ebf9d376c8c56/include -I/home/conan/w/prod/BuildSingleReference/.conan/data/icu/72.1/_/_/package/89c033c297610ad0912f33219ffa32a1112d95c2/include -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/tools/bootstrap/../../corelib/global -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/tools/bootstrap/.. -I/home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/tools/bootstrap/../../3rdparty/tinycbor/src -isystem /home/conan/w/prod/BuildSingleReference/.conan/data/pcre2/10.42/_/_/package/647f8233073b10c84d51b1833c74f5a1cb8e8604/include -m64 -DNDEBUG -O2 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -ffunction-sections -fdata-sections -mshstk -Wsuggest-override -fcf-protection=full -std=gnu++17 -MD -MT qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/text/qstring.cpp.o -MF qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/text/qstring.cpp.o.d -o qtbase/src/tools/bootstrap/CMakeFiles/Bootstrap.dir/__/__/corelib/text/qstring.cpp.o -c /home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/text/qstring.cpp
      /home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/text/qstring.cpp: In function ‘bool simdTestMask(const char*&, const char*, quint32)’:
      /home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/text/qstring.cpp:494:41: error: void value not ignored as it ought to be
        494 |                     return updatePtrSimd(data1);
            |                            ~~~~~~~~~~~~~^~~~~~~
      /home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/text/qstring.cpp:498:41: error: void value not ignored as it ought to be
        498 |                     return updatePtrSimd(data2);
            |                            ~~~~~~~~~~~~~^~~~~~~
      /home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/text/qstring.cpp:507:37: error: void value not ignored as it ought to be
        507 |                 return updatePtrSimd(data1);
            |                        ~~~~~~~~~~~~~^~~~~~~
      /home/conan/w/prod/BuildSingleReference/.conan/data/qt/6.5.0/_/_/source/src/qtbase/src/corelib/text/qstring.cpp:515:37: error: void value not ignored as it ought to be
        515 |                 return updatePtrSimd(data1);
            |                        ~~~~~~~~~~~~~^~~~~~~

      Attachments

        For Gerrit Dashboard: QTBUG-112920
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            ericlemanissier Eric Lemanissier
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes